--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="author" content="Tor Hveem">
 
         <!-- Le styles -->
-        <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="/static/fa/css/font-awesome.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
         <style type="text/css">
             body {
                 padding-bottom: 40px;
@@ -49,7 +49,7 @@
                 border: 0;
             }
         </style>
-        <link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
         <link href="/static/screen.css" rel="stylesheet">
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -136,15 +136,14 @@
 
             <footer>
             <p></p>
-            <img src="/static/idriftmono.png">
             <p>&copy; 2012</p>
             </footer>
 
         </div>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="/static/handlebars-1.0.rc.1.js"></script>
-        <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
         <script id="vm_migration_modal_template" type="text/x-handlebars-template">
             <div id="migration_modal" class="modal hide fade">
